--- a/src/style.css
+++ b/src/style.css
@@ -221,6 +221,7 @@ button {
   right: 0;
   bottom: 50px;
   height: 170px;
+  opacity: 0.6;
   background: linear-gradient(180deg, rgba(0, 0, 0, 1) 12%, rgba(255, 255, 255, 1) 146%);
 }
 
@@ -824,7 +825,7 @@ button {
   z-index: 4;
   top: calc(50% - 220px);
   left: calc(50% - 220px);
-  border: 10px solid #0093c4;
+  border: 10px solid #FF7100;
 }
 
 .logo--active {
@@ -840,7 +841,7 @@ button {
 }
 
 .music-bar {
-  background-color: #0093c4;
+  background-color: #FF7100;
   transform-origin: center;
   animation: music-animation .5s infinite ease;
   width: 15px;
@@ -1149,7 +1150,7 @@ a {
 .maps-list__item--active {
   width: 750px;
   transform: translateX(-70px) skew(-15deg) !important;
-  background-color: #1D7471;
+  background-color: #0093c4;
   opacity: 1;
 }
 
@@ -1339,7 +1340,7 @@ a {
   align-items: center;
   justify-content: center;
   width: 50px;
-  background-color: #000;
+  background-color: #FF7100;
 }
 
 .input-search {
@@ -1367,7 +1368,7 @@ a {
 .sort-box__sort-head {
   padding: 10px 15px;
   border-radius: 4px;
-  background-color: #000;
+  background-color: #FF7100;
   transform: skew(-15deg);
   cursor: pointer;
   display: flex;
@@ -1505,7 +1506,7 @@ a {
 .canvas-wrapper {
   width: 480px;
   height: 800px;
-  margin: 100px auto;
+  margin: 0 auto;
 }
 
 canvas {
