--- a/src/style.css
+++ b/src/style.css
@@ -1498,8 +1498,9 @@ a {
 
 .healts-progress {
   display: block;
-  width: 30%;
+  width: 100%;
   height: 30px;
+  transition: .4s ease;
   background-color: #ff0000;
 }
 
@@ -1578,10 +1579,22 @@ canvas {
   font-weight: 600;
   left: 50%;
   transform: translateX(-50%);
-  transition: .15s linear;
+  transition: .5s ease;
+  opacity: 0;
 }
 
 .accuracy--active {
   font-size: 45px;
-  transition: .05s linear;
+  transition: .025s ease;
+  opacity: 1;
+}
+
+.game-frame__combo-number {
+  font-size: 50px;
+  transition: .5s ease;
+}
+
+.game-frame__combo-number--active {
+  font-size: 75px;
+  transition: .025s ease;
 }
