--- a/src/style.css
+++ b/src/style.css
@@ -1465,7 +1465,7 @@ a {
   bottom: 50px;
   left: 40px;
   font-size: 50px;
-  color: #0093c4;
+  color: #fff;
   font-weight: 500;
 }
 
@@ -1600,4 +1600,57 @@ canvas {
 .game-frame__combo-number--active {
   font-size: 75px;
   transition: .025s ease;
+}
+
+.fale-popup {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.fale-popup--show {
+  display: flex;
+}
+
+.fale-popup__content {
+  border-radius: 24px;
+  padding: 50px;
+  max-width: 500px;
+  flex-grow: 1;
+  background-color: #1d1e1f;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.fale-popup__content-title {
+  font-size: 34px;
+  text-align: center;
+  color: #0093c4;
+}
+
+.fale-popup__btn {
+  width: 180px;
+  height: 60px;
+  border-radius: 8px;
+  margin: 0 auto;
+  border: 2px solid #fff;
+  font-size: 22px;
+  color: #fff;
+}
+
+.fale-popup-retry {
+  background-color: rgb(165, 165, 61);
+}
+
+.fale-popup-exit {
+  background-color: #e73b3b;
 }
