--- a/src/style.css
+++ b/src/style.css
@@ -867,23 +867,7 @@ button {
 }
 
 .menu-frame:after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  z-index: 1;
-  --s: 37px; /* control the size */
-  --c: #0000, #282828 0.5deg 119.5deg, #0000 120deg;
-  --g1: conic-gradient(from 60deg at 56.25% calc(425% / 6), var(--c));
-  --g2: conic-gradient(from 180deg at 43.75% calc(425% / 6), var(--c));
-  --g3: conic-gradient(from -60deg at 50% calc(175% / 12), var(--c));
-  background: var(--g1), var(--g1) var(--s) calc(1.73 * var(--s)), var(--g2),
-    var(--g2) var(--s) calc(1.73 * var(--s)), var(--g3) var(--s) 0,
-    var(--g3) 0 calc(1.73 * var(--s)) #1e1e1e;
-  background-size: calc(2 * var(--s)) calc(3.46 * var(--s));
+
 }
 
 
@@ -1513,7 +1497,7 @@ a {
   margin: 0 auto;
 }
 
-canvas {
+.game-canvas {
   background-color: #000;
 }
 
@@ -1653,4 +1637,37 @@ canvas {
 
 .fale-popup-exit {
   background-color: #e73b3b;
+}
+
+/* ---- reset ---- */ 
+.particles-js-canvas-el{ 
+  display: block;
+  vertical-align: bottom; 
+}
+/* ---- particles.js container ---- */
+#particles-js{ 
+  position:absolute; 
+  width: 100%; 
+  height: 100%; 
+  background-color: #2c2e43; 
+  background-image: url(""); 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  background-position: 50% 50%; 
+} 
+
+.js-count-particles{ 
+  font-size: 1.1em; 
+} 
+#stats, 
+.count-particles{
+   -webkit-user-select: none; 
+    margin-top: 5px; margin-left: 5px; 
+}
+#stats{ 
+  border-radius: 3px 3px 0 0; 
+  overflow: hidden; 
+}
+ .count-particles{ 
+  border-radius: 0 0 3px 3px; 
 }
